--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="manifest" href="/manifest.json"> 
+    <link rel="apple-touch-icon" href="/assets/icon-192.png"> 
+    <link rel="icon" href="/assets/favicon.ico">
+    <meta name="theme-color" content="#111111">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>slots-solitaire</title>
   </head>
