--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="manifest" href="/manifest.json"> 
-    <link rel="apple-touch-icon" href="/assets/icon-192.png"> 
-    <link rel="icon" href="/assets/favicon.ico">
+    <link rel="manifest" href="/public/manifest.json"> 
+    <link rel="apple-touch-icon" href="/public/assets/icon-192.png"> 
+    <link rel="icon" href="/public/assets/favicon.ico">
     <meta name="theme-color" content="#111111">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>slots-solitaire</title>
